tests/bad/invalid_yield.ae
/// fail: Cannot yield in this context

def main() {
	yield 5
}